# Pacial-HPC-2

Modelo en Cpp/: CMakeLists.txt  main.cpp
Modelo en Cpp/LinealRegresion/: linealregresion.cpp
Modelo en Python Sklearn/: tercer_parcial_hpc_2_dataset.py
Modelo en Sklearn/: tercer_parcial_hpc_2_dataset.py
